<resources>
    <string name="app_name">FirebaseTrivia</string>
    <string name="register_str">Register</string>
    <string name="login_str">Login</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Password (confirm)</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">User name</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="password_mismatch">Password is not the same</string>
    <string name="google_login_str">Login with Google</string>
    <string name="submit_username">Submit</string>
    <string name="sign_in">Sign-In</string>
    <string name="trivia_question">Trivia Question</string>
    <string name="set_username">Set Username</string>
    <string name="last_seen">Last seen</string>
    <string name="current_position">Current position</string>
    <string name="points">Points</string>
    <string name="notification_title">Today\'s question</string>
    <string name="notifications_channel_name">Questions</string>
    <string name="channel_notifications_description">"Notifications channel for receiving questions "</string>
    <string name="submit_answer">Submit answer</string>
    <string name="correct_answer">Correct!</string>
    <string name="wrong_answer">Wrong!</string>
    <string name="provide_user_name_prompt">Provide user name:</string>
    <string name="register_failed">Registration failed</string>
    <string name="login_failed">Failed to login</string>
    <string name="congrats_msg_text">Congratulations!\n You answered all the questions</string>
    <string name="notification_title_str">Time for a trivia question!</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribe_success">You are now a subscriber</string>
    <string name="subscribe_failed">Subscribe process failed</string>

    <string name="action_dismiss_notification">dismiss_notification</string>
    <string name="no_answer">No answer provided!</string>
    <string name="new_question_available_msg_no_login">Hi, Login! A new question is available for you! Check it out!</string>
    <string name="new_question_available_msg">Hi, %1$s! A new question is available for you! Check it out!</string>

</resources>