<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.firebasetrivia.singin.LoginFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_loginFragment_to_questionFragment"
            app:destination="@id/questionFragment" />

        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.firebasetrivia.profile.ProfileFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.example.firebasetrivia.question.QuestionFragment"
        android:label="@string/trivia_question"
        tools:layout="@layout/fragment_question">
        <action
            android:id="@+id/action_questionFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/usernameFragment"
        android:name="com.example.firebasetrivia.singin.UsernameFragment"
        android:label="@string/set_username"
        tools:layout="@layout/fragment_username">
        <action
            android:id="@+id/action_usernameFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.firebasetrivia.singin.RegisterFragment"
        android:label="@string/register_str"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_registerFragment_to_usernameFragment"
            app:destination="@id/usernameFragment" />
    </fragment>
</navigation>