<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.firebasetrivia.singin.UsernameViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/username_hint"
            android:visibility="visible"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_person"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                tools:text="Waldemar Pawlak" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_username_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/submit_username"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/register_username"
            app:layout_constraintStart_toStartOf="@+id/register_username"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/provide_user_name_prompt"
            app:layout_constraintBottom_toTopOf="@+id/register_username"
            app:layout_constraintStart_toStartOf="@+id/register_username" />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit_username_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>